[gd_scene load_steps=8 format=2]

[ext_resource path="res://Cards/Scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://Cards/card_textures/creature.png" type="Texture" id=2]
[ext_resource path="res://Shaders/CardShining.shader" type="Shader" id=3]
[ext_resource path="res://Cards/Scripts/BordersSprite.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 123.82, 174.861 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/shining_color = Color( 1, 0, 0, 1 )
shader_param/shining_width = 10
shader_param/shining_frequency = 0.3
shader_param/fps = 30

[sub_resource type="ImageTexture" id=3]

[node name="Card" type="Area2D"]
gravity = 0.0
script = ExtResource( 1 )

[node name="BackSprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="FrontSprite" type="Sprite" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="BordersSprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = SubResource( 3 )
script = ExtResource( 4 )
border_width = 10
